@@ -1,4 +1,5 @@
 ﻿- Spare single parents from early death (at least until the kids move out), to help prevent orphan households
+- Overhaul mod conflict checking and notification
 - Overhaul Harmony error notification
 - Overhaul logging
 
